k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwave-api
  namespace: cloudwave
  labels:
    app: cloudwave-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudwave-api
  template:
    metadata:
      labels:
        app: cloudwave-api
    spec:
      containers:
        - name: cloudwave-api
          image: docker.io/eknathdj/cloudwave-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
