k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-sample-svc
  namespace: devops-sample
spec:
  type: ClusterIP
  selector:
    app: devops-sample-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
