k8s/base/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: cloudwave
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
